Add support for multiple perl versions

--- a/2008/Dockerfile
+++ b/2008/Dockerfile
@@ -1,5 +1,6 @@
 ARG HISTORIC_MIRROR=ftp://tug.org/historic/
-FROM debian:buster as base
+ARG PERL_VERSION=5.10.1
+FROM ghcr.io/tkw1536/texlive-docker:none-${PERL_VERSION} as base
 
 FROM base as setup
 
@@ -7,9 +8,7 @@ FROM base as setup
 RUN apt-get update \
     && apt-get -y --no-install-recommends install \
         ca-certificates \
-        bsdtar \
-        perl \
-        wget
+        bsdtar
 
 # Download the installer, and put all the files into /installer/
 ARG HISTORIC_MIRROR
